# AquaCal

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .secrets.baseline  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DEPENDENCIES.yaml  LICENSE  README.md  STRUCTURE.md  TASKS.md  generate_small_preset_data.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: docs.yml  publish.yml  release.yml  slow-tests.yml  test.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  architecture.md  geometry.md  knowledge-base.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.4-MILESTONE-AUDIT.md  v1.4-REQUIREMENTS.md  v1.4-ROADMAP.md
.planning/phases/01-foundation-and-cleanup/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-ci-cd-automation/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-public-release/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-CONTEXT.md  03-VERIFICATION.md
.planning/phases/04-example-data/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-documentation-site/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-04-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/phases/06-interactive-tutorials/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-04-PLAN.md  06-04-SUMMARY.md  06-CONTEXT.md  06-RESEARCH.md  06-VERIFICATION.md
.planning/phases/07-infrastructure-check/: 07-01-PLAN.md  07-01-SUMMARY.md  07-VERIFICATION.md
.planning/phases/08-cli-qa-execution/: 08-01-PLAN.md  08-01-SUMMARY.md
.planning/phases/09-bug-triage/: 09-CONTEXT.md
.planning/phases/10-documentation-audit/: 10-01-AUDIT-REPORT.md  10-01-PLAN.md  10-01-SUMMARY.md  10-02-PLAN.md  10-02-SUMMARY.md  10-03-PLAN.md  10-03-SUMMARY.md  10-CONTEXT.md  10-VERIFICATION.md
.planning/phases/11-documentation-visuals/: 11-01-PLAN.md  11-01-SUMMARY.md  11-02-PLAN.md  11-02-SUMMARY.md  11-CONTEXT.md  11-VERIFICATION.md
.planning/phases/12-tutorial-verification/: 12-01-PLAN.md  12-01-SUMMARY.md  12-02-PLAN.md  12-02-SUMMARY.md  12-03-PLAN.md  12-03-SUMMARY.md  12-CONTEXT.md
.planning/phases/13-setup/: 13-01-PLAN.md  13-01-SUMMARY.md  13-02-PLAN.md  13-02-SUMMARY.md  13-CONTEXT.md  13-VERIFICATION.md
.planning/phases/14-geometry-rewiring/: 14-01-PLAN.md  14-01-SUMMARY.md  14-02-PLAN.md  14-02-SUMMARY.md  14-03-PLAN.md  14-03-SUMMARY.md  14-CONTEXT.md  14-VERIFICATION.md
.planning/phases/15-utility-and-i-o-rewiring/: 15-CONTEXT.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/todos/pending/: 2026-02-15-design-better-hero-image-for-readme.md  2026-02-18-check-version-field-in-json-output-reads-local-version-properly.md
docs/: COORDINATES.md  agent_implementation_spec.md  conf.py  development_plan.md  index.md  index.rst  overview.md
docs/_static/scripts/: bfs_pose_graph.py  hero_image.py  palette.py  sparsity_pattern.py  style_guide.md
docs/api/: calibration.rst  config.rst  core.rst  datasets.rst  index.md  index.rst  io.rst  triangulation.rst  validation.rst
docs/guide/: cli.md  coordinates.md  glossary.md  index.md  optimizer.md  refractive_geometry.md  troubleshooting.md
docs/guide/_diagrams/: coordinate_frames.py  generate_all.py  ray_trace.py
docs/tutorials/: 01_full_pipeline.ipynb  02_diagnostics.ipynb  02_synthetic_validation.ipynb  03_synthetic_validation.ipynb  index.md
src/aquacal/: __init__.py  __main__.py  cli.py
src/aquacal/calibration/: __init__.py  _optim_common.py  extrinsics.py  interface_estimation.py  intrinsics.py  pipeline.py  refinement.py
src/aquacal/config/: __init__.py  example_config.yaml  schema.py
src/aquacal/core/: __init__.py  _aquakit_bridge.py  board.py  camera.py  interface_model.py  refractive_geometry.py
src/aquacal/datasets/: __init__.py  _manifest.py  download.py  loader.py  rendering.py  synthetic.py
src/aquacal/datasets/data/: manifest.json
src/aquacal/datasets/data/small/: detections.json  ground_truth.json
src/aquacal/io/: __init__.py  detection.py  frameset.py  images.py  serialization.py  video.py
src/aquacal/triangulation/: __init__.py  triangulate.py
src/aquacal/utils/: __init__.py  transforms.py
src/aquacal/validation/: __init__.py  comparison.py  diagnostics.py  reconstruction.py  reprojection.py
tasks/: current.md  p17.md  p20.md  p21.md  template.md
tests/: __init__.py
tests/synthetic/: README.md  __init__.py  compare_refractive.py  conftest.py  experiment_helpers.py  experiments.py  ground_truth.py  test_full_pipeline.py  test_refractive_comparison.py
tests/unit/: test_board.py  test_camera.py  test_cli.py  test_comparison.py  test_datasets.py  test_detection.py  test_diagnostics.py  test_extrinsics.py  test_images.py  test_interface_estimation.py  test_interface_model.py  test_intrinsics.py  test_optim_common.py  test_pipeline.py  test_reconstruction.py  test_refinement.py  test_refractive_geometry.py  test_reprojection.py  test_schema.py  test_serialization.py  test_transforms.py  test_triangulate.py  test_video.py
