[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aquacal"
version = "0.1.0"
description = "Refractive multi-camera calibration for underwater arrays with Snell's law modeling"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Tucker Lancaster"}
]
keywords = ["calibration", "multi-camera", "underwater", "refraction", "computer-vision", "charuco"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy",
    "scipy",
    "opencv-python>=4.6",
    "pyyaml",
    "matplotlib",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "black",
    "types-PyYAML",
]

[project.urls]
Homepage = "https://github.com/tlancaster6/AquaCal"
Documentation = "https://aquacal.readthedocs.io"
Repository = "https://github.com/tlancaster6/AquaCal"
Issues = "https://github.com/tlancaster6/AquaCal/issues"
Changelog = "https://github.com/tlancaster6/AquaCal/blob/main/CHANGELOG.md"

[project.scripts]
aquacal = "aquacal.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
